<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/main">
        <menu>
            <item
                android:id="@+id/nav_subject_info"
                android:icon="@drawable/ic_hierarchy"
                android:title="@string/subject_info" />
            <item
                android:id="@+id/nav_cloud_services"
                android:icon="@drawable/ic_cloud"
                android:title="@string/cloud_services" />
            <item
                android:id="@+id/nav_currency"
                android:icon="@drawable/ic_introduce"
                android:title="@string/currency" />
        </menu>
    </item>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_customer_service"
                android:icon="@drawable/ic_customer_service"
                android:title="@string/customer_service" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
