<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tokyonth.carnet.App"
    tools:showIn="@layout/user_login"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_weight="1.0">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/user_login"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_gravity="center"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_mine"/>

                <com.tokyonth.carnet.ui.widget.ClearEditText
                    android:layout_width="match_parent"
                    android:background="@drawable/rect_fillet_bg"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/ic_icon_user"
                    android:singleLine="true"
                    android:drawableRight="@drawable/ic_delete_selector"
                    android:hint="输入邮箱"
                    android:inputType="none"
                    android:maxLines="1"
                    android:ems="10"
                    android:padding="8dp"
                    android:drawablePadding="8dp"
                    android:id="@+id/act_main_et_account"
                    android:layout_height="wrap_content" />

                <com.tokyonth.carnet.ui.widget.ClearEditText
                    android:layout_width="match_parent"
                    android:background="@drawable/rect_fillet_bg"
                    android:drawableLeft="@drawable/ic_icon_pwd"
                    android:singleLine="true"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_delete_selector"
                    android:hint="输入密码"
                    android:padding="8dp"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:ems="10"
                    android:id="@+id/act_main_et_password"
                    android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_login"
                android:layout_marginTop="16dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="all"
                android:gravity="center"
                android:layout_marginTop="6dp"
                android:textColor="@color/colorAccent"
                android:text="@string/retrieve_password"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_btn_bg"
                    android:padding="6dp"
                    android:src="@drawable/ic_icon_qq"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_btn_bg"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_icon_wechat"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_btn_bg"
                    android:padding="8dp"
                    android:src="@drawable/ic_icon_microblog"/>

            </LinearLayout>

            <com.github.jorgecastilloprz.FABProgressCircle
                android:id="@+id/fabProgressCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:arcColor="@color/colorPrimaryDark"
                app:arcWidth="2dp"
                app:finalIcon="@drawable/ic_shield">

            <android.support.design.widget.FloatingActionButton
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:id="@+id/login_fab"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_arrow_right"/>

            </com.github.jorgecastilloprz.FABProgressCircle>

            <com.dx.dxloadingbutton.lib.LoadingButton
                android:visibility="gone"
                android:id="@+id/btn_login"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1.5dp"
                android:layout_marginEnd="1.5dp"
                app:lb_resetAfterFailed="true"
                app:lb_btnColor="#d29f9f9f"
                app:lb_btnText="@string/login" />

            <LinearLayout
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/act_main_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_password"/>

                <TextView
                    android:id="@+id/tv_noacc"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@android:color/white"
        android:gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:text="Copyright © 25hours 2019 - 2020\n All Rights Reserved"/>

</LinearLayout>